justificativa e objetivos started

--- a/tech_report/cover.tex
+++ b/tech_report/cover.tex
@@ -5,14 +5,14 @@
 \bf\large
 UNIVERSIDADE FEDERAL DO PARÁ\\\vspace{1.5pt}
 INSTITUTO DE TECNOLOGIA\\\vspace{1pt}
-FACULDADE DE ENGENHARIA DA COMPUTAÇÃO E TELECOMUNICAÇÕES\\
+FACULDADE DE ENGENHARIA DA COMPUTAÇÃO E\\\vspace{1.5pt}
+TELECOMUNICAÇÕES\\
 
 \vspace{120pt}
 {\Large
-Controle de TV e Servidor LAMP em Sistemas\\\vspace{3pt}
-Embarcados: Uma Solução em BeagleBone Black para Clientes\\\vspace{3pt}
-Desktop e Android com Suporte à Reconhecimento e\\\vspace{7pt}
-Síntese de Voz
+Controle de TV e Servidor LAMP em Sistemas Embarcados:\\\vspace{3pt}
+Uma Solução para Clientes Web e Android com Suporte à\\\vspace{7pt} 
+Reconhecimento e Síntese de Voz
 }
 
 \vfill
