--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -73,7 +73,7 @@ Abril/2015
 % Introduction -----------------------------------------------------------------
 \newpage
 \begin{section}{Introdução}
-Tecnologias Assistias\\
+Tecnologias Assistivas\\
 A automação residencial está cada dia facilitando mais a vida dos moradores. 
 Atualmente, boa parte das tarefas do cotidiano são realizadas através de
 soluções automáticas e práticas, resultando em um ambiente confortável e 
@@ -92,8 +92,8 @@ O objetivo principal consiste em criar um protótipo portável que seja capaz de
 controlar um aparelho de televisão através do envio remoto de sinais. Além
 disso, o sistema será configurado como um servidor que disponibiliza um
 serviço genérico de reconhecimento de fala, de modo que o aparelho de TV
-mencionado possa ser controlado remotamente através da voz do usuário; e um
-serviço de síntese de fala, provendo feedback das ações de acordo com o
+mencionado possa ser remotamente controlado através da voz do usuário; e um
+serviço de síntese de fala, provendo \textit{feedback} das ações de acordo com o
 entendimento do sistema ASR.
 
 \subsection{Reconhecimento Automático de Voz}
@@ -135,21 +135,23 @@ bibliotecas necessárias.
 \begin{section}{Justificativa}
 % [IBGE'10] ftp://ftp.ibge.gov.br/Censos/Censo_Demografico_2010/Caracteristicas_Gerais_Religiao_Deficiencia/tab1_3.pdf
 % http://g1.globo.com/brasil/noticia/2012/04/239-dos-brasileiros-declaram-ter-alguma-deficiencia-diz-ibge.html
-Segundo o Instituto Brasileiro de Geografia e Estatística, no censo realizado em
-2010, aproximadamente 23,9\% dos brasileiros declaram ter alguma deficiência.
-Esse número ainda é mais impressionante quando se pensa que cerca de um quarto
-de uma população de 190 milhões de habitantes é portadora de alguma necessidade 
-especial. Ainda segundo os dados, 6,9\% (13,3~mi) dos brasileiros apresentam algum
-grau de deficiência motora, enquanto 18,8\% (35,7~mi) afirmam serem cegas ou
-terem alguma dificuldade para enxergar.
+Segundo o Instituto Brasileiro de Geografia e Estatística (IBGE), no censo
+realizado em 2010, aproximadamente 23,9\% dos brasileiros declaram ter alguma
+deficiência~\cite{ibge10}. Esse número ainda é mais impressionante quando se
+pensa que cerca de um quarto de uma população de 190 milhões de habitantes é
+portadora de alguma necessidade especial. Ainda segundo os dados, 6,9\%
+(13,3~mi) dos brasileiros apresentam algum grau de deficiência motora, enquanto
+18,8\% (35,7~mi) afirmam serem cegas ou terem alguma dificuldade para enxergar.
 
-Essa pesquisa tem como finalidade diminuir a exclusão digital vivenciada
-especialmente por pessoas com alguma necessidade motora ou visual, as quais
-estão à margem da utilização de alguns dispositivos eletrônicos por conta da
-falta de acessibilidade. A tecnologia de reconhecimento de fala torna acessível
-a utilização de qualquer dispositivo eletrônico por usuários incapazes de
-realizar movimentos específicos com membros superiores, como segurar um controle
-físico e apertar botões ou digitar, por exemplo. Além disso, 
+Essa pesquisa tem como finalidade apresentar uma solução para diminuir a
+exclusão digital vivenciada especialmente por pessoas com necessidade motora ou
+visual, as quais estão à margem da utilização de dispositivos eletrônicos
+por conta da falta de acessibilidade. A tecnologia de reconhecimento de fala
+torna acessível a utilização de qualquer dispositivo eletrônico por usuários
+incapazes de realizar movimentos específicos com membros superiores, como
+segurar um controle físico e apertar botões ou digitar, por exemplo. Além disso,
+os portadores de necessidades visuais também poderão ser ajudados, já que nem
+todos os controles possuem referências reconhecíveis pelo tato.
 
 \end{section}
 
@@ -188,9 +190,11 @@ ou a própria Beagle Board.
 	\hline
 	Produto & Preço (Total em R\$)\\
 	\hline
-	1 $\times$ BeagleBone Board Black & 700,00 \\
+	1 $\times$ BeagleBone Board Black & 200,00\\
+	1 $\times$ Smartphone com Android & 100,00\\
 	2 $\times$ InfraRed Leds & 2,50\\
-	1 $\times$ Smartphone com Android & 800,00\\
+	\hline
+	Total & 1502.50\\
 	\hline
 \end{tabular}
 \end{table}
