comparação uno BBB Rpi

--- a/tech_report/cover.tex
+++ b/tech_report/cover.tex
@@ -11,7 +11,7 @@ TELECOMUNICAÇÕES\\
 \vspace{120pt}
 {\Large
 Controle de TV e Servidor LAMP em Sistemas Embarcados:\\\vspace{3pt}
-Uma Solução para Clientes Web e Android com Suporte à\\\vspace{7pt} 
+Uma Solução para Clientes Android com Suporte à\\\vspace{7pt} 
 Reconhecimento e Síntese de Voz
 }
 
