--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -17,7 +17,7 @@
 \title{
 	\vspace{40pt}
 	Controle de TV e Servidor LAMP em Sistemas Embarcados: Uma Solução para
-	Clientes Web e Android com Suporte à Reconhecimento e Síntese de Voz
+	Clientes Android com Suporte à Reconhecimento e Síntese de Voz
 	\vspace{25pt}
 }
 
@@ -74,10 +74,10 @@ Abril/2015
 \begin{section}{Introdução}
 A interface homem-máquina encontra-se cada vez mais amigável. O que antes era
 portado somente por empresas e pessoas com poder financeiro diferenciado e acima
-da média, em termos de tecnologia, é hoje muito mais simples e agradável para
+da média, em termos de tecnologia, é hoje muito mais acessível e simples para
 usuários domésticos sem profundo conhecimento no assunto. Diversos estudos vêm
 sendo desenvolvidos a fim de melhorar ainda mais essa comunicação, de modo que a
-máquina se aproxime mais de ações como pensar e falar, típicas do ser humano.
+máquina se aproxime mais de ações típicas do ser humano, como pensar e falar.
 
 Síntese e reconhecimento automático de voz (do inglês \textit{text-to-speech} e
 \textit{automatic speech recognition}, respectivamente, TTS e
@@ -87,23 +87,33 @@ entre duas pessoas. O ASR refere-se ao sistema que, tomando o sinal de fala
 digitalizado como entrada, é capaz de gerar o texto transcrito na saída. Já um
 sistema TTS realiza a função contrária, na qual um sinal analógico de voz é
 sintetizado de acordo com o texto posto na entrada. São inúmeras as aplicações
-que utilizam tais sistemas envolvendo processamento de voz. Este trabalho tem um
-foco em uma área especial: automação doméstica com foco em acessibilidade.
+que utilizam tais sistemas envolvendo processamento de voz. Dentre elas, pode-se
+destacar a automação residencial com foco em acessibilidade.
 
 % Ref.: Comitê de Ajudas Técnicas (CAT) -- TA
 % http://www.assistiva.com.br/tassistiva.html
-De acordo com \cite{cat}, tecnologias assistivas (TA) ``englobam produtos,
-recursos, metodologias, estratégias, práticas e serviços que objetivam promover
-a funcionalidade, relacionada à atividade e participação de pessoas com
-deficiência, incapacidades ou mobilidade reduzida, visando sua autonomia,
-independência, qualidade de vida e inclusão social''.
+De acordo com \cite{cat, gelderblom}, tecnologia assistiva (TA) é um campo da
+engenharia biomédica dedicada à aumentar a independência e mobilidade de pessoas
+com deficiência, englobando metodologias, práticas e serviços que objetivam
+promover sua autonomia, qualidade de vida e inclusão social. Tal tecnologia
+busca reduzir a necessidade vivenciada por pessoas que precisam de soluções que
+não as deixem à margem da utilização de dispositivos eletrônicos. Em outras
+palavras, para diminuir a exclusão digital imposta pela incapacidade de
+manipular certos dispositivos, a acessibilidade é vista como elemento
+fundamental para elevar a autoestima e o grau de independência dessas pessoas.
+Além disso, a implementação da acessibilidade também pode ser útil para os
+não portadoras de necessidades especiais, já que o controle de equipamentos se
+torna mais prático e confortável.
 
-Servidor próprio de voz, independente de internet\\
-
-Vale ressaltar que todas as APIs e softwares utilizados para criação dos
-sistemas e dos recursos utilizados (com exceção do HTK, o qual será visto mais
-adiante) possuem licença \textit{open source} e são encontrados disponíveis
-livremente na Internet.
+Nesse sentido, este trabalho busca preparar um servidor local portátil de
+reconhecimento de voz em Português Brasileiro (PT\_BR) e de síntese de voz
+baseado no microcomputador BeagleBone Black de modo que, quando acessado pelo
+dispositivo que agirá como controle remoto --- no caso, um smartphone com
+sistema operacional Android ---, seja capaz de acessar as funções mais básicas
+de um aparelho televisivo.  Vale ressaltar que todas as APIs e softwares
+utilizados para criação dos sistemas e dos recursos utilizados (com exceção do
+HTK, o qual será visto mais adiante) possuem licença \textit{open source} e são
+encontrados disponíveis livremente na Internet.
 \end{section}
 
 % Goals ------------------------------------------------------------------------
@@ -124,12 +134,12 @@ e decodificar áudio em aproximadamente tempo real para tarefas de ditado de até
 60 mil palavras.
 
 Para que o Julius possa realizar o reconhecimento em Português Brasileiro, serão
-são necessários basicamente dois recursos: um modelo acústico e um dicionário
+necessários basicamente dois recursos: um modelo acústico e um dicionário
 fonético. Modelos acústicos genéricos para PT\_BR podem ser encontrados na
-página do Grupo FalaBrasil, bem como o software que cria o dicionário fonético
-(conversor grafema-fonema ou G2P). Entretanto, embora a taxa de acerto dos
-modelos seja razoavelmente boa, é possível melhorá-la através da criação
-ou treino de novos modelos.
+página do Grupo FalaBrasil~\cite{falabrasil}, bem como o software que cria o
+dicionário fonético (conversor grafema-fonema ou G2P)~\cite{lapsg2p}.
+Entretanto, embora a taxa de acerto dos modelos seja satisfatória, é
+possível melhorá-la através da criação ou treino de novos modelos.
 
 O processo de treino será realizado pelo software HTK (acrônimo para kit de
 ferramentas dos modelos ocultos de Markov, livremente traduzido do inglês), o
@@ -141,8 +151,14 @@ criado com o software G2P.
 O software eSpeak é a principal referência em síntese de voz em ambientes Linux.
 Graças à disponibilização de uma API do eSpeak no site oficial do desenvolvedor,
 o sistema, além de conseguir ``ouvir e entender'', também será capaz de 
-``falar''. O download dos modelos para PT\_BR é feito automaticamente com o das
+``falar''. O download dos modelos para PT\_BR é feito juntamente com o das
 bibliotecas necessárias.
+
+Para que a BeagleBone seja capaz de reproduzir o som sintetizado, é necessário
+um cartão de som com um auto-falante. Embora o cartão possa ser comprado, a 
+opção mais barata é construí-lo. O circuito é bem simples, sendo constituído
+basicamente por um \textit{speaker}, um amplificador operacional LM386, além de
+alguns resistores e capacitores.
 
 \subsection{Servidor LAMP}
 \textcolor{red}{***PResdro***}\\
@@ -150,6 +166,22 @@ bibliotecas necessárias.
 \textcolor{red}{***Pesro***}\\
 \textcolor{red}{***Porredo***}\\
 \textcolor{red}{***PResdro***}\\
+
+\subsection{Controle Remoto de TV}
+Os aparelhos televisivos atuais, assim como a grande maioria dos dispositivos
+eletrônicos domésticos, possuem a tecnologia de controle remoto baseada em luz
+infravermelha. Pode-se observar que na extremidade superior dos controles
+remotos, há pelo menos um led infravermelho (IR Led) capaz de emitir luz e,
+dessa forma, transmitir uma informação binária para o circuito localizado na 
+parte frontal da TV. Esse circuito possui um sensor infravermelho (IR sensor), o
+qual, atuando como o receptor da comunicação, é capaz de receber os bits
+transmitidos e repassá-los para o processador do circuito, o qual executará a
+tarefa relacionada à decodificação dos bits.
+
+Nesse sentido, o \textit{datasheet} de uma TV específica será estudado para que
+a BBB possa transmitir o conjunto de bits exatos, reconhecíveis
+pela TV em questão, para a execução de determinadas tarefas, como ``aumentar
+volume'' ou ``mudar para o canal 18'', por exemplo.
 \end{section}
 
 % Why? -------------------------------------------------------------------------
@@ -174,78 +206,146 @@ segurar um controle físico e apertar botões ou digitar, por exemplo. Além disso,
 os portadores de necessidades visuais também poderão ser ajudados, já que nem
 todos os controles possuem referências reconhecíveis pelo tato.
 
-
 % Ref.: ADA - American with Disabilities Act
-% regula os direitos dos cidadãos com deficiência nos EUA, além de prover a
-% base legal dos fundos públicos para compra dos recursos que estes necessitam.
+O Ato de Americanos com Deficiência (ADA)~\cite{ada} regula os direitos dos
+cidadãos com deficiência nos EUA, além de prover a base legal dos fundos
+públicos para compra dos recursos que estes necessitam. Algumas categorias de TA
+foram criadas com base nas diretrizes gerais da ADA, das quais podemos salientar
+três como justificativa do trabalho: 
 
-\begin{itemize}
-	\item Recursos de Acesssibilidade ao computador
+\begin{enumerate}
+	\item Recursos de acessibilidade ao computador
 	\begin{itemize}
-		\item Equipamentos de entrada e saída (síntese de voz, Braille),
-		auxílios alternativos de acesso (ponteiras de cabeça, de luz), teclados
-		modificados ou alternativos, acionadores, softwares especiais (de 
-		reconhecimento de voz, etc.), que permitem as pessoas com deficiência 
-		a usarem o computador.
+		\item Equipamentos de entrada e saída (\underline{síntese de voz}, 
+		Braille), auxílios alternativos de acesso (ponteiras de cabeça, de luz),
+		teclados modificados, softwares especiais (\underline{reconhecimento de 
+		voz}, etc.), que permitem as pessoas com deficiência a usarem o 
+		computador.
 	\end{itemize}
-	\item Sistemas de Controle de Ambiente
+	\item Sistemas de controle de ambiente
 	\begin{itemize}
 		\item Sistemas eletrônicos que permitem as pessoas com limitações
-		moto-locomotoras, controlar remotamente aparelhos eletro-eletrônicos, 
-		sistemas de segurança, entre outros, localizados em seu quarto, sala, 
+		moto-locomotoras, controlar remotamente aparelhos eletro-eletrônicos,
+		sistemas de segurança, entre outros, localizados em seu quarto, sala,
 		escritório, casa e arredores.
 	\end{itemize}
 	\item Auxílios para cegos ou com visão subnormal
 	\begin{itemize}
 		\item Auxílios para grupos específicos que inclui lupas e lentes,
-		Braille para equipamentos com síntese de voz, grandes telas de 
-		impressão, sistema de TV com aumento para leitura de documentos, 
+		Braille para equipamentos com \underline{síntese de voz}, grandes telas 
+		de impressão, sistema de TV com aumento para leitura de documentos, 
 		publicações etc.
 	\end{itemize}
-\end{itemize}
+\end{enumerate}
 \end{section}
 
 % Theory Revision --------------------------------------------------------------
 \begin{section}{Revisão Teórica}
 % [IEEE'11] Designing Android Applications with both Online and Offline Voice Control of Household Devices
 % http://makezine.com/2013/04/15/arduino-uno-vs-beaglebone-vs-raspberry-pi/
-Arduino vs BeagleBoneBlack vs Raspberry Pi:
+% http://tecnologia.hsw.uol.com.br/controle-remoto.htm
+% http://mundoestranho.abril.com.br/materia/como-funciona-o-controle-remoto
+% http://arduino.cc/en/Tutorial/SimpleAudioPlayer
 
-\textcolor{red}{**thaigo**}\\
-\textcolor{red}{**thaigo**}\\
-\textcolor{red}{**thaigo**}\\
-\textcolor{red}{**thaigo**}\\
-\textcolor{red}{**thaigo**}\\
+O Arduino é uma plataforma flexível com grande capacidade de interfaceamento com
+quase qualquer coisa, porém é uma plataforma simples, ótima para projetos
+menores já que o Arduino é um microcontrolador e não um microprocessador, ele
+pode ser programado em C mas não roda nenhum sistema operacional.
+
+O Raspberry Pi, por ser bastante completo, pode ser considerado um mini 
+computador. Todo o seu armazenado é fornecido por um cartão SD, além de ser
+possível se conectar à Internet através de um conector Ethernet. Sendo
+necessário a instalação de um sistema operacional, o Raspberry Pi ainda possui
+interface de saída HDMI e é muito útil para aplicações gráficas
+
+A BeagleBone é comparável ao Raspberry Pi. Entretanto, por ter mais pinos
+(GPIO) e um processador mais poderoso, a BeagleBone é uma escolha óbvia para
+projetos mais elaborados. Além de possuir diversas opções de conexão, a
+BeagleBone une a flexibilidade de interfaceamento do arduino com a capacidade
+de processamento rápido do Raspberry Pi. A principal desvantagem é o preço.
+
+Uma comparação entre os três equipamentos é dado abaixo na
+Tabela~\ref{comparison}:
+
+% http://michaelhleonard.com/raspberry-pi-or-beaglebone-black/
+% http://randomnerdtutorials.com/arduino-vs-raspberry-pi-vs-beaglebone-vs-pcduino/
+% http://makezine.com/2013/04/15/arduino-uno-vs-beaglebone-vs-raspberry-pi/
+\begin{table}[!h]
+\centering
+\begin{tabular}{c|c c c}
+\hline
+				& Arduino UNO	& BeagleBone Black	& Raspberry Pi \\
+\hline
+Chip			& - & TI AM3359 & BCM2835 SoC full HD \\
+CPU				& ATMega328	& 1 GHz ARM Cortex-A8 & 700 MHz ARM1176JZ-F \\
+GPU				& - & PowerVR SGX530 & Dual Core VideoCore IV \\
+Armazenamento	& 2 kB SRAM & 512 MB DDR3 & 512 MB SDRAM\\
+Flash			& 32 kB & 2 GB on-board eMMC, MicroSD & SD, MMC, SDIO card slot\\
+GPIO			& 14 & 65 & 8 \\
+Video			& - & mini HDMI & HDMI\\
+OS				& - & Linux & Linux \\
+Amperagem (mA)	& 42 & 210-460 & 150-350 \\
+Voltagem (V)	& 7-12 & 5 & 5 \\
+USB				& - & 1 Host, 1 Mini Client  & 2 Hosts, 1 Micro Power\\
+Ethernet		& - & 1 10/100 Mbps & 1 10/100 Mbps \\
+%Resolução		& - & 1280x1024 (5:4), 1024x768 (4:3), 1280x720 (16:9), 1440x900 (16:10) all at 16 bit	& 	Extensive from 640x350 up to 1920x1200, this includes 1080p\\
+%Camera connector & - & - & Rpi \\
+\hline
+\end{tabular}
+\caption{Comparação entre três principais plataformas}
+\label{comparison}
+\end{table}
 \end{section}
 
 % Methodology ------------------------------------------------------------------
 \begin{section}{Metodologia}
-\subsection{Preparação do servidor}
+\subsection{Preparação do Servidor}
 O servidor, por ser o elemento chave na consolidação do projeto, deve ser o 
-módulo a ser prioritariamente configurado, afim de ser preparado para atender
+módulo a ser prioritariamente configurado, a fim de ser preparado para atender
 às devidas requisições, bem como executar qualquer tipo de aplicação solicitada.
-Sendo assim, a instalação da plataforma Angstrom foi tomada como o primeiro
-passo. Angstrom~\cite{angstrom} é um sistema operacional, baseado em Linux,
-preparado exclusivamente para plataformas embarcadas, tais como o Raspberry Pi
-ou a própria Beagle Board.
+Sendo assim, a instalação da plataforma Ångstr\"{o}m foi tomada como o primeiro
+passo. Ångstr\"{o}m~\cite{angstrom} é um sistema operacional, baseado em Linux,
+preparado exclusivamente para plataformas embarcadas, sendo o padrão para a 
+própria BeagleBone.
 
+\subsection{Reconhecimento de Voz}
+% http://eda.eme.ro/handle/10598/28187
+Em~\cite{cassio14}, o Julius foi configurado para funcionar em modo servidor
+através da opção nativa ``-adinnet'' (A/D Input from Network, conversão A/D com
+entrada pela rede). Isso permite que o Julius receba amostras de áudio via
+streaming pela rede através de uma comunicação com um cliente genérico via
+socket.
+
+\subsection{Síntese de Voz}
 % http://stackoverflow.com/questions/2661129/espeak-sapi-dll-usage-on-windows
+
+\subsection{Servidor LAMP}
+
+\subsection{Cliente Android}
+
 \end{section}
 
 % Prices -----------------------------------------------------------------------
+% BBB: http://www.farnellnewark.com.br/ : 270,55 + 36,80 = 307,35
+% BBB: http://www.aliexpress.com.br/ : 180,34
+% Rpi: http://www.aliexpress.com.br/ : 147,92
 \begin{section}{Orçamento}
 \begin{table}[!h]
 \centering
-\begin{tabular}{l|c}
+\begin{tabular}{l|c c c c}
 	\hline
-	Produto & Preço (Convertido em R\$)\\
+	Produto & USD (U\$) & BRL (R\$) & IOF (R\$) & Total (R\$) \\
 	\hline
-	1 $\times$ BeagleBone Board Black & 200,00\\
-	1 $\times$ Smartphone com Android & 200,00\\
-	2 $\times$ InfraRed Leds & 2,50\\
+	BBB &\\
+	Smartphone &\\
+	IR Led &\\
+	IR Sensor &\\
+	Capacitor &\\
+	Resistor &\\
+	Speaker 8~$\Omega$ &\\
+	LM386 amplifier&\\
 	\hline
-	Total & 402.50\\
-	\hline
+	Total & & & & 500 conto\\
 \end{tabular}
 \end{table}
 \end{section}
