revisão teórica iniciada

--- a/tech_report/cover.tex
+++ b/tech_report/cover.tex
@@ -10,9 +10,8 @@ TELECOMUNICAÇÕES\\
 
 \vspace{120pt}
 {\Large
-Controle de TV e Servidor LAMP em Sistemas Embarcados:\\\vspace{3pt}
-Uma Solução para Clientes Android com Suporte à\\\vspace{7pt} 
-Reconhecimento e Síntese de Voz
+Controle de Aparelhos Eletrônicos por Sistemas Embarcados:\\\vspace{3pt}
+Uma Solução com Suporte à Reconhecimento e Síntese de Voz\\%\vspace{7pt} 
 }
 
 \vfill
